FIxes the ability to set collapseMenus and force burger time

--- a/src/header/css/header-menus.pcss
+++ b/src/header/css/header-menus.pcss
@@ -42,7 +42,8 @@
 	}
 }
 
-.esri-header-menus.-always-hamburger .esri-header-menus-toggle {
+.esri-header-menus.-always-hamburger .esri-header-menus-toggle,
+.esri-header-menus.-always-hamburger.-mobile .esri-header-menus-menu {
 	display: block;
 }
 
